--- a/css/styles.css
+++ b/css/styles.css
@@ -1,36 +1,44 @@
 body {
-	margin: 0;
-	background-color: #000;
-	width: 100%;
-	height: 100%;
+  margin: 0;
+  background-color: #000;
+  width: 100%;
+  height: 100%;
 }
 
-a, h1, h2, h3, h4, h5, h6, p {
-	color: #fff;
-	background-color: transparent;
+a,
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p,
+small {
+  color: #fff;
+  background-color: transparent;
 }
 
 #particles-js {
-	position: absolute;
-	width: 100%;
-	height: 100%;
-	background-image: url("");
-	background-repeat: no-repeat;
-	background-size: cover;
-	background-position: 50% 50%;
-	margin-top: -10px;
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  background-image: url("");
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: 50% 50%;
+  margin-top: -10px;
 }
 
 .panel {
-	position: absolute;
-	top: 50%;
-	left: 50%;
-	transform: translate(-50%, -50%);
-	text-align: center;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  text-align: center;
 }
 
 .icon-container {
-	margin: 0 auto;
-	text-align: center;
-	font-size: 25px;
+  margin: 0 auto;
+  text-align: center;
+  font-size: 25px;
 }
